Add comprehensive styles for multi-player game theory components
- Implement styles for coalition cards, including hover effects and distinct color schemes for different coalitions.
- Create responsive grid layouts for coalition cards, player analysis, and equilibrium factors.
- Design multi-player matrix and equilibrium tables with improved aesthetics and hover effects.
- Introduce styles for player analysis, strategic positions, and payoff breakdowns.
- Add styles for mechanism design components and multi-player overview sections.
- Ensure responsive design adjustments for various screen sizes.
- Include dark mode support for improved accessibility.

--- a/GazaWarDocumentation/index.html
+++ b/GazaWarDocumentation/index.html
@@ -67,6 +67,9 @@
                         <a href="#geneva" class="nav__link" role="menuitem">Geneva Conventions</a>
                     </li>
                     <li class="nav__item" role="none">
+                        <a href="game-theory-analysis.html" class="nav__link" role="menuitem">Game Theory Analysis</a>
+                    </li>
+                    <li class="nav__item" role="none">
                         <a href="#sources" class="nav__link" role="menuitem">Sources</a>
                     </li>
                 </ul>
